fix(tag): lessened vertical alignment (#237)
* fix(tag): lessened vertical alignment

* fix(tag): added rogue space at the end of span found in the Tag render method

--- a/react/Tag/Tag.less
+++ b/react/Tag/Tag.less
@@ -1,7 +1,7 @@
 @import (reference) "~seek-asia-style-guide/theme";
 
 @tag-h-padding: @grid-base * 2;
-@tag-v-padding: @grid-base;
+@tag-v-padding: 0;
 
 .borderRadius(@radius) {
   -webkit-border-radius: @radius;
